--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,23 @@
 name: Android CI
 
-on:
-  push:
-    branches:
-      - master
-      - feature/*
+on: [push]
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: malinskiy/action-android/install-sdk@release/0.0.5
-      - name: Build with Gradle
-        run: ./gradlew build
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: malinskiy/action-android/install-sdk@release/0.0.5
+    - name: Build with Gradle
+      run: ./gradlew build
