--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,15 @@
 name: Android CI
 
-on:
-  push:
-    branches:
-      - master
-      - feature/*
+on: [push]
 jobs:
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
+
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: malinskiy/action-android/install-sdk@release/0.0.5
-      - name: Build with Gradle
-        run: ./gradlew build
+    - uses: actions/checkout@v2
+    - uses: malinskiy/action-android/install-sdk@release/0.0.5
+    - name: Build with Gradle
+      run: ./gradlew build
