--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,11 +10,8 @@ jobs:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - uses: actions/checkout@v2
+      - uses: malinskiy/action-android/install-sdk@release/0.0.5
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
   build:
