--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,6 +6,14 @@ on:
       - master
       - feature/*
 jobs:
+  lint:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: malinskiy/action-android/install-sdk@release/0.0.5
+      - name: Unit tests
+        run: ./gradlew lint
   test:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
@@ -13,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: malinskiy/action-android/install-sdk@release/0.0.5
       - name: Unit tests
-        run: bash ./gradlew test --stacktrace
+        run: ./gradlew test --stacktrace
   build:
     runs-on: ubuntu-latest
     steps:
