--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Build project with Gradle
         run: ./gradlew build
       - name: Signing and Releasing Release APK using Hub
+        id: create_signed_apk
         uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: ./app/build/outputs/apk/release
@@ -47,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ${{ SIGNED_RELEASE_FILE }}
+          asset_path: ${{ steps.create_signed_apk.outputs.signedReleaseFile }}
           asset_name: my.apk
           asset_content_type: application/vnd.android.package-archive
