--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,8 @@ name: Release APK
 
 on:
   push:
-    branches:
-      - master
-      - feature/*
+    tags:
+      - 'v*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,7 +37,7 @@ jobs:
           body: |
             Changes in this Release
             - First Change
-          draft: true
+          draft: false
           prerelease: false
       - name: Upload Release Asset
         id: upload-release-asset
