--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ ext {
             core            : '1.2.0',
             lifecycle       : '2.2.0',
             constraintLayout: '1.1.3',
-            fragmentVersion : '1.2.3',
-            fragmentKtx     : '1.3.0-alpha02',
+            fragmentVersion : '1.3.0-alpha04',
+            fragmentKtx     : '1.3.0-alpha04',
             activityVersion : '1.1.0',
             activityKtx     : '1.1.0',
             multidex        : '2.0.1'
