--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -36,19 +36,20 @@ ext {
     ]
     androidx = [
             appCompat       : '1.1.0',
-            core            : '1.2.0',
+            core            : '1.3.1',
             lifecycle       : '2.2.0',
             constraintLayout: '1.1.3',
-            fragmentVersion : '1.3.0-alpha04',
-            fragmentKtx     : '1.3.0-alpha04',
+            fragmentVersion : '1.3.0-alpha07',
+            fragmentKtx     : '1.3.0-alpha07',
             activityVersion : '1.1.0',
             activityKtx     : '1.1.0',
             multidex        : '2.0.1'
     ]
-    daggerVersion = '2.23.2'
+    daggerVersion = '2.24'
     retrofitVersion = '2.8.0'
+    loggerVersion = '2.2.0'
     rx = [
             kotlin : '2.0.0',
-            android: '2.0.0'
+            android: '2.0.2'
     ]
 }
