--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.androidx = [
+            navigation: '2.3.0-alpha05'
+    ]
     repositories {
         google()
         jcenter()
@@ -12,6 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$androidx.navigation"
     }
 }
 
