--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$androidx.navigation"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
 }
 
@@ -39,7 +40,7 @@ ext {
             versionName      : "1.0",
     ]
     androidx = [
-            appCompat       : '1.1.0',
+            appCompat       : '1.2.0',
             core            : '1.3.1',
             lifecycle       : '2.2.0',
             constraintLayout: '1.1.3',
