--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,15 @@ dependencies {
     implementation "androidx.core:core-ktx:$androidx.core"
     implementation "androidx.constraintlayout:constraintlayout:$androidx.constraintLayout"
     implementation "androidx.lifecycle:lifecycle-extensions:$androidx.lifecycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx.lifecycle"
 
     implementation "androidx.fragment:fragment:$androidx.fragmentVersion"
     implementation "androidx.fragment:fragment-ktx:$androidx.fragmentKtx"
     implementation "androidx.activity:activity:$androidx.activityVersion"
     implementation "androidx.activity:activity-ktx:$androidx.activityKtx"
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     // Room
     implementation "androidx.room:room-runtime:$androidx.room"
