--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,10 @@ ext {
             android : '2.28-alpha',
             androidx: '1.0.0-alpha02'
     ]
-    retrofitVersion = '2.9.0'
+    okhttp = [
+            version : '4.4.0',
+            retrofit: '2.9.0'
+    ]
     loggerVersion = '2.2.0'
     rx = [
             kotlin : '2.0.0',
