--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0-rc02'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -34,7 +34,7 @@ task clean(type: Delete) {
 ext {
     app = [
             compileSdkVersion: 28,
-            minSdkVersion    : 26,
+            minSdkVersion    : 22,
             targetSdkVersion : 28,
             versionCode      : 1,
             versionName      : "1.0",
